# stroll_bearnav

./: CMakeLists.txt
action/: predict.action
cfg/: listener.cfg
launch/: evaluate-view.launch  evaluate.launch  stroll-2-map-preprocessors.launch  stroll-collect-statistics.launch  stroll-core-mapping.launch  stroll-core.launch  stroll-gui-tests.gui  stroll-gui.launch
mesas_2018_exposure/: process-prediction.sh
msg/: FeatureArray.msg  NavigationInfo.msg
new/: create-supermap.sh  gather-temporal.sh  (+1 more)
src/: CMakeLists.txt  autoRemapTest.cpp  featureExtraction.cpp  featureHolder.cpp  mapMatchInfoListener.cpp  mapPreprocessor.cpp  mapper.cpp  navigator.cpp  statistics.cpp  statistics.h  tester.cpp  testerImageExtractor.cpp  visualisation.cpp
src/prediction/: PredictionController.cpp  PredictionController.h
src/prediction/strategies/: CBestStrategy.cpp  CBestStrategy.h  CFirst.cpp  CFirst.h  CMonteCarloStrategy.cpp  CMonteCarloStrategy.h  CQuantilStrategy.cpp  CQuantilStrategy.h  CStrategy.h
src/prediction/t_models/: CDummy.cpp  CFrelement.cpp  CHyperTime.cpp  CHyperTime.h  CHyperTimeMV.h  CTemporal.cpp  CTemporal.h  CTimeHist.cpp  CTimeHist.h
src/strategies/: CBestStrategy.cpp  CBestStrategy.h  CFirst.cpp  CFirst.h  CMonteCarloStrategy.cpp  CMonteCarloStrategy.h  CQuantilStrategy.cpp  CQuantilStrategy.h  CStrategy.cpp  CStrategy.h
src/t_models/: CDummy.h  CFrelement.cpp  CFrelement.h  CHyperTime.cpp  CHyperTime.h  CHyperTimeMV.cpp  CMovAvg.cpp  CMovAvg.h  CSum.cpp  CSum.h  CTemporal.cpp  CTemporal.h  CTimeMean.cpp  CTimeMean.h  CWSum.cpp  CWSum.h
(+55 files in other folders)
